# uc-intg-arcam

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt  test_device_connection.py  test_imports.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
intg_arcam/: __init__.py  __main__.py  config.py  device.py  driver.py  media_player.py  remote.py  select.py  sensor.py  setup_flow.py
lib/: ucapi-0.5.3.dev0+gd11cfea3f.d20260320-py3-none-any.whl
