[project]
name = "uc-intg-arcam"
dynamic = ["version"]
description = "Arcam FMJ integration for Unfolded Circle Remote"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ucapi-framework>=1.8.4",
    "ucapi>=0.5.2",
    "arcam-fmj==1.8.2",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.dynamic]
version = {attr = "intg_arcam.__version__"}
